--- a/src/qml/translations/en.json
+++ b/src/qml/translations/en.json
@@ -1,67 +1,62 @@
 {
-  "mainMenu": {
-    "title": "Matchbox Wallet",
-    "wallet": "Wallet",
-    "settings": "Settings",
-    "testCamera": "Test camera"
-  },
-  "wallet": {
-    "title": "Wallet",
-    "balance": "Balance",
-    "send": "Send",
-    "receive": "Receive",
-    "addressbook": "Addressbook"
-  },
-  "settings": {
-    "title": "Settings",
-    "general": "General",
-    "system": "System"
-  },
-  "settingsGeneral": {
-    "title": "General settings",
-    "fiatCurrency": "Fiat Currency: %1",
-    "language": "Language: %1"
-  },
-  "settingsGeneralFiat": {
-    "title": "Currency Selection",
-    "selectCurrency": "Select Currency"
-  },
-  "settingsGeneralLanguage": {
-    "title": "Language Selection",
-    "selectLanguage": "Select Language",
-    "english": "English",
-    "czech": "Czech"
-  },
-  "settingsSystem": {
-    "title": "System settings",
-    "wifi": "WiFi settings"
-  },
-  "settingsSystemWifi": {
-    "title": "WiFi settings",
-    "availableNetworks": "Available networks",
-    "connecting": "Connecting...",
-    "connected": "Connected",
-    "disconnected": "Disconnected",
-    "password": "Password",
-    "connect": "Connect",
-    "disconnect": "Disconnect"
-  },
-  "powerOff": {
-    "title": "Power Off",
-    "confirmShutdown": "Do you really want to shut down the device?",
-    "shutdown": "Shutdown",
-    "cancel": "Cancel"
-  },
-  "camera": {
-    "title": "Camera Preview",
-    "noCamera": "Camera not available"
-  },
-  "common": {
-    "back": "Back",
-    "ok": "OK",
-    "cancel": "Cancel",
-    "yes": "Yes",
-    "no": "No",
-    "loading": "Loading..."
-  }
+	"mainMenu": {
+		"title": "Matchbox Wallet",
+		"wallet": "Wallet",
+		"settings": "Settings"
+	},
+	"wallet": {
+		"title": "Wallet",
+		"balance": "Balance",
+		"send": "Send",
+		"receive": "Receive",
+		"addressbook": "Addressbook"
+	},
+	"settings": {
+		"title": "Settings",
+		"general": "General",
+		"system": "System"
+	},
+	"settingsGeneral": {
+		"title": "General settings",
+		"fiat": "Fiat Currency: %1",
+		"language": "Language: %1"
+	},
+	"settingsGeneralFiat": {
+		"title": "Currency Selection",
+		"selectCurrency": "Select Currency"
+	},
+	"settingsGeneralLanguage": {
+		"title": "Language Selection",
+		"selectLanguage": "Select Language",
+		"english": "English",
+		"czech": "Czech"
+	},
+	"settingsSystem": {
+		"title": "System settings",
+		"wifi": "WiFi settings"
+	},
+	"settingsSystemWifi": {
+		"title": "WiFi settings",
+		"availableNetworks": "Available networks",
+		"connecting": "Connecting...",
+		"connected": "Connected",
+		"disconnected": "Disconnected",
+		"password": "Password",
+		"connect": "Connect",
+		"disconnect": "Disconnect"
+	},
+	"power": {
+		"title": "Power Off",
+		"quit": "Exit application",
+		"reboot": "Reboot",
+		"shutdown": "Shutdown"
+	},
+	"common": {
+		"back": "Back",
+		"ok": "OK",
+		"cancel": "Cancel",
+		"yes": "Yes",
+		"no": "No",
+		"loading": "Loading..."
+	}
 }
