Fix WiFi indicator and colours

--- a/src/qml/translations/cz.json
+++ b/src/qml/translations/cz.json
@@ -62,7 +62,7 @@
 				},
 				"wifi": {
 					"button": "WiFi",
-					"title": "WiFi nastavení"
+					"title": "Nastavení WiFi"
 				},
 				"time": {
 					"button": "Datum a čas",
