Add sound settings

--- a/src/qml/translations/cz.json
+++ b/src/qml/translations/cz.json
@@ -95,6 +95,11 @@
 				"lora": {
 					"button": "LoRa",
 					"title": "LoRa nastavení"
+				},
+				"sound": {
+					"button": "Zvuk",
+					"title": "Nastavení zvuku",
+					"volume": "Hlasitost"
 				}
 			}
 		},
