System settings update - appearance

--- a/src/qml/translations/cz.json
+++ b/src/qml/translations/cz.json
@@ -116,7 +116,7 @@
 						"button": "Aktualizovat aplikaci"
 					},
 					"system": {
-						"current": "Verze systému",
+						"current": "Verze vašeho systému",
 						"latest": "Nejnovější verze systému",
 						"button": "Aktualizovat systém"
 					}
