Improve crypto/battery/event handling and UI integration
• Add EventQueue.ts and crypto2_helper.ts for centralized event handling and linking crypto2 events
• Refactor crypto0.js to lazy-load ethers, support RSA key pair, keccak256 and wallet operations
• Enhance BatteryManager with additional logging for debugging battery status
• Extend index.ts with new crypto handler commands and disable extra debug logs
• Update main.cpp to inject wifi and battery update intervals from environment variables
• Mute excess debug output in NodeJS/node_thread modules
• Update QML pages (MainMenu, AddressBook, BatteryManager, EventManager) to integrate crypto2 address book events and battery checks
• Enhance UI translations and modify start.sh to use “bun install” for JS dependencies

--- a/src/qml/lang/en.json
+++ b/src/qml/lang/en.json
@@ -17,7 +17,22 @@
 			},
 			"addressbook": {
 				"button": "Address book",
-				"title": "Address book"
+				"title": "Address book",
+				"empty": "No addresses saved yet",
+				"add": {
+					"title": "Add Address",
+					"name": "Name",
+					"address": "Address"
+				},
+				"edit": {
+					"title": "Edit Address",
+					"name": "Name",
+					"address": "Address"
+				},
+				"delete": {
+					"title": "Delete Address",
+					"confirm": "Are you sure you want to delete"
+				}
 			},
 			"network": {
 				"button": "Change network",
@@ -182,6 +197,10 @@
 		"cancel": "Cancel",
 		"yes": "Yes",
 		"no": "No",
+		"add": "Add",
+		"edit": "Edit",
+		"delete": "Delete",
+		"save": "Save",
 		"loading": "Loading...",
 		"error": "Error",
 		"languages": {
